--- a/terminal_tooling/posts/2023_10_06_ranger.org
+++ b/terminal_tooling/posts/2023_10_06_ranger.org
@@ -1,4 +1,4 @@
-* Ranger                                                      :file:managers:
+* Ranger                                                      :file_managers:
 
   [[https://github.com/ranger/ranger][Ranger]] is a "console file manager with VI key bindings."
 
