--- a/terminal_tooling/posts/2023_10_06_ranger.org
+++ b/terminal_tooling/posts/2023_10_06_ranger.org
@@ -1,6 +1,27 @@
+#+TITLE: Ranger - Terminal Tooling
+#+STARTUP: inlineimages
 * Ranger                                                      :file_managers:
 
-  [[https://github.com/ranger/ranger][Ranger]] is a "console file manager with VI key bindings."
+  [[https://github.com/ranger/ranger][Ranger]] is a "console file manager with VI key bindings." Specifically
+  it is a terminal file manager. You're most likely familiar with GUI
+  file managers in the form of mac's finder, or the directrory viewer
+  built into your editor of choice.
+
+  Terminal file managers operate in a unique space as they tend to
+  focus on keyboard based workflows over click-and-drag mouse-based
+  workflows. How can you get anything done as a file manager using
+  just your keyboard? If you're in the terminal, why not just use
+  good ol' ~cd~, ~mv~, ~cp~, ~rm~ and friends?
+
+  What you lose in intuitive (read: familiar) UI, you gain in
+  expressive and configurable power.
+
+  Convinced? Not yet? Let's see some examples
+
+** Overview
+
+ #+attr_html: :width 900px
+ [[file:/images/terminal_tooling/posts/ranger/dir_view.png]]
 
 ** Installing
 
