--- a/terminal_tooling/posts/2023_10_06_ranger.org
+++ b/terminal_tooling/posts/2023_10_06_ranger.org
@@ -21,7 +21,7 @@
 ** Overview
 
  #+attr_html: :width 900px
- [[file:/images/terminal_tooling/posts/ranger/dir_view.png]]
+ [[/images/terminal_tooling/posts/ranger/dir_view.png]]
 
 ** Installing
 
