--- a/terminal_tooling/index.org
+++ b/terminal_tooling/index.org
@@ -18,4 +18,5 @@
   file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
+   - [2023-10-13] [[./posts/2023_10_13_midnight_commander.org][Midnight Commander]]
    - [2023-10-06] [[file:posts/2023_10_06_ranger.org][Ranger]]
