--- a/terminal_tooling/index.org
+++ b/terminal_tooling/index.org
@@ -1,22 +1,26 @@
 #+TITLE: Terminal Tooling
-* Terminal tooling
-  Over the years of working in software, I've sampled many, many command line and
-  keyboard-centric tools. I have a fixation on finding tools that minimize the
-  friction between my thoughts and the computer.
-  
-  On my journey this has lead me to terminal based workflows using terminal text
-  editors, multiplexers, command line chat apps, note taking tools, and much more.
-  
-  In this weekly series of articles, I hope to publish deep dives into a variety of
-  topics including file managers, core shell commands to help you master your system,
-  innovative re-imaginations of those classic commands, and novel tools which aim to
-  bring more of your life into the terminal (like note taking, music players, chat
-  clients, etc.)
+#+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+#+FILETAGS: file_managers
+#+HTML_HEAD: <link rel="stylesheet" href="/css/stylesheet.css" />
+#+HTML_HEAD: <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-  To kick off the inaugural article, I will be taking a look at the terminal file
-  manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first of 4 articles focusing on terminal
-  file managers (October is national terminal file manager month...I just decided).
+Over the years of working in software, I've sampled many, many command line and
+keyboard-centric tools. I have a fixation on finding tools that minimize the
+friction between my thoughts and the computer.
+
+On my journey this has lead me to terminal based workflows using terminal text
+editors, multiplexers, command line chat apps, note taking tools, and much more.
+
+In this weekly series of articles, I hope to publish deep dives into a variety of
+topics including file managers, core shell commands to help you master your system,
+innovative re-imaginations of those classic commands, and novel tools which aim to
+bring more of your life into the terminal (like note taking, music players, chat
+clients, etc.)
+
+To kick off the inaugural article, I will be taking a look at the terminal file
+manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first of 4 articles focusing on terminal
+file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
-   - [2023-10-13] [[./posts/2023_10_13_midnight_commander.org][Midnight Commander]]
+   - [2023-10-13] DRAFT [[./posts/2023_10_13_midnight_commander.org][Midnight Commander]]
    - [2023-10-06] [[file:posts/2023_10_06_ranger.org][Ranger]]
