DRAFT mc complete

--- a/emacs/posts/draft_how_this_blog_is_made.org
+++ b/emacs/posts/draft_how_this_blog_is_made.org
@@ -1,3 +1,9 @@
 #+TITLE: How this blog is made
 #+STARTUP: inlineimages
 
+htmlize package
+org-project-alist
+org-publish
+simple.css
+github pages
+
