--- a/terminal_tooling/posts/2023_10_06_ranger.org
+++ b/terminal_tooling/posts/2023_10_06_ranger.org
@@ -1,4 +1,4 @@
-#+TITLE: Ranger - Terminal Tooling
+#+TITLE: Ranger - [[../index.org][Terminal Tooling]]
 #+STARTUP: inlineimages
 #+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 #+HTML_HEAD: <link rel="stylesheet" href="/css/stylesheet.css" />
