--- a/terminal_tooling/posts/2023_10_13_midnight_commander.org
+++ b/terminal_tooling/posts/2023_10_13_midnight_commander.org
@@ -1,4 +1,4 @@
-#+TITLE: Midnight Commander - Terminal Tooling
+#+TITLE: Midnight Commander - [[../index.org][Terminal Tooling]]
 #+STARTUP: inlineimages
 #+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 #+HTML_HEAD: <link rel="stylesheet" href="/css/stylesheet.css" />
