--- a/terminal_tooling/posts/2023_10_20_vifm.org
+++ b/terminal_tooling/posts/2023_10_20_vifm.org
@@ -1,4 +1,4 @@
-#+TITLE: Vifm - Terminal Tooling
+#+TITLE: Vifm - [[../index.org][Terminal Tooling]]
 #+STARTUP: inlineimages
 #+HTML_HEAD: <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 #+HTML_HEAD: <link rel="stylesheet" href="/css/stylesheet.css" />
