--- a/terminal_tooling/index.org
+++ b/terminal_tooling/index.org
@@ -22,5 +22,6 @@ manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first o
 file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
+   - [2023-10-20] [[file:posts/2023_10_20_vifm.org][Vifm]]
    - [2023-10-13] [[./posts/2023_10_13_midnight_commander.org][Midnight Commander]]
    - [2023-10-06] [[file:posts/2023_10_06_ranger.org][Ranger]]
