--- a/terminal_tooling/index.org
+++ b/terminal_tooling/index.org
@@ -22,7 +22,8 @@ manager, [[file:posts/2023_10_06_ranger.org][ranger]].  This will be the first o
 file managers (October is national terminal file manager month...I just decided).
 
 ** Posts
-   - [2023-11-10] [[file:posts/2023_11_10_sed.org][sed]]
+   - [2023-11-17] [[file:posts/2023_11_17_sed_part_2.org][sed (part 2)]]
+   - [2023-11-10] [[file:posts/2023_11_10_sed.org][sed (part 1)]]
    - [2023-11-03] [[file:posts/2023_11_03_find.org][find]]
    - [2023-10-27] [[file:posts/2023_10_27_grep.org][grep]]
    - [2023-10-20] [[file:posts/2023_10_20_vifm.org][Vifm]]
